@@ -9,6 +9,17 @@ Pierangelo Masarati     <masarati@aero.polimi.it>
 Paolo Mantegazza        <mantegazza@aero.polimi.it>
 
 
+MBDyn 1.X-Devel
+	Enhancements:
+		- added screw joint (Mauro Manetti & Marco Morandini)
+	Backward compatibility issues:
+	Known issues:
+		- Schur solver is broken
+		- TotalPinJoint inverse dynamics support is broken
+		- RTAI and multithread support incompatible
+		- module-octave and multithread support incompatible
+	Bug fixes:
+
 MBDyn 1.5.6
 	Enhancements:
 		- added explicit cast to math parser
@@ -36,6 +47,7 @@ MBDyn 1.5.6
 		- added support for octave 3.8.1 (Reinhard Resch)
 		- more joints with NetCDF support (Louis Gagnon)
 		- added output of electric nodes (Eduardo Okabe)
+		- added check for finite test (Reinhard Resch)
 	Backward compatibility issues:
 		- "overwrite" option of "setenv" changed
 		- incompatible module-aerodyn syntax change
